cmake_minimum_required(VERSION 3.14)
project(SDiZOp2)

set(CMAKE_CXX_STANDARD 11)

add_executable(SDiZOp2 structures/DoublyLinkedList.h structures/DoublyLinkedList.cpp structures/Table.h structures/Table.cpp main.cpp structures/graphs/MatrixGraph.cpp structures/graphs/MatrixGraph.h tests/MatrixGraphTest.cpp tests/MatrixGraphTest.h structures/graphs/misc/Edge.cpp structures/graphs/misc/Edge.h structures/priority_queue/HeapPriorityQueue.h structures/priority_queue/HeapPriorityQueue.cpp structures/priority_queue/QueueNode.cpp structures/priority_queue/QueueNode.h tests/HeapPriorityQueueTest.cpp tests/HeapPriorityQueueTest.h structures/graphs/ListGraph.cpp structures/graphs/ListGraph.h tests/ListGraphTest.cpp tests/ListGraphTest.h structures/graphs/IGraph.cpp structures/graphs/IGraph.h utilities/GraphUtils.cpp utilities/GraphUtils.h tests/GraphUtilsTest.cpp tests/GraphUtilsTest.h algorithms/GraphAlgorithms.cpp algorithms/GraphAlgorithms.h structures/Stack.cpp structures/Stack.h tests/AlgorithmsTest.cpp tests/AlgorithmsTest.h)